Removed stop words

--- a/Project Codes/04. Data Processing and Feature Engineering/01_06_2020_Preprocessing NLP.ipynb
+++ b/Project Codes/04. Data Processing and Feature Engineering/01_06_2020_Preprocessing NLP.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,14 @@
     "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "import nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +750,7 @@
        "5            NaN  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +777,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1001,7 @@
        "9                  95.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1100,8 +1102,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stop Word Removal"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1214,7 @@
        "4    13333814    102616701      Mohammad   77.0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,8 +1225,176 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Language Parsing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\", \"you've\", \"you'll\", \"you'd\", 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', \"she's\", 'her', 'hers', 'herself', 'it', \"it's\", 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', \"that'll\", 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'off', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'no', 'nor', 'not', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'don', \"don't\", 'should', \"should've\", 'now', 'd', 'll', 'm', 'o', 're', 've', 'y', 'ain', 'aren', \"aren't\", 'couldn', \"couldn't\", 'didn', \"didn't\", 'doesn', \"doesn't\", 'hadn', \"hadn't\", 'hasn', \"hasn't\", 'haven', \"haven't\", 'isn', \"isn't\", 'ma', 'mightn', \"mightn't\", 'mustn', \"mustn't\", 'needn', \"needn't\", 'shan', \"shan't\", 'shouldn', \"shouldn't\", 'wasn', \"wasn't\", 'weren', \"weren't\", 'won', \"won't\", 'wouldn', \"wouldn't\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Import stopwords\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "#check stopwords\n",
+    "stop =stopwords.words('english')\n",
+    "print(stop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>comments</th>\n",
+       "      <th>date</th>\n",
+       "      <th>id_review</th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>reviewer_id</th>\n",
+       "      <th>reviewer_name</th>\n",
+       "      <th>score</th>\n",
+       "      <th>comments_without_stopwords</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gracious hosts  beautiful apartment  out...</td>\n",
+       "      <td>2018-11-12</td>\n",
+       "      <td>348116418</td>\n",
+       "      <td>1989997</td>\n",
+       "      <td>55483280</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>gracious hosts beautiful apartment outstanding...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ruths lovely apartment is conveniently locat...</td>\n",
+       "      <td>2013-10-14</td>\n",
+       "      <td>8060644</td>\n",
+       "      <td>1657512</td>\n",
+       "      <td>289650</td>\n",
+       "      <td>Selena</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Ruths lovely apartment conveniently located Ca...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Great hosts  Cool location  Sparkling clean  ...</td>\n",
+       "      <td>2019-11-22</td>\n",
+       "      <td>567541237</td>\n",
+       "      <td>34181981</td>\n",
+       "      <td>14454231</td>\n",
+       "      <td>Kirk</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>Great hosts Cool location Sparkling clean Litt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I booked the place for my friends who are a n...</td>\n",
+       "      <td>2018-12-23</td>\n",
+       "      <td>361512912</td>\n",
+       "      <td>17237462</td>\n",
+       "      <td>1254338</td>\n",
+       "      <td>Shawn</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>I booked place friends newlywed couple They re...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>If youre staying for 12 days Maybe you can ha...</td>\n",
+       "      <td>2019-04-06</td>\n",
+       "      <td>433520140</td>\n",
+       "      <td>13333814</td>\n",
+       "      <td>102616701</td>\n",
+       "      <td>Mohammad</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>If youre staying 12 days Maybe handle room lon...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            comments       date  id_review  \\\n",
+       "0        gracious hosts  beautiful apartment  out... 2018-11-12  348116418   \n",
+       "1    Ruths lovely apartment is conveniently locat... 2013-10-14    8060644   \n",
+       "2   Great hosts  Cool location  Sparkling clean  ... 2019-11-22  567541237   \n",
+       "3   I booked the place for my friends who are a n... 2018-12-23  361512912   \n",
+       "4   If youre staying for 12 days Maybe you can ha... 2019-04-06  433520140   \n",
+       "\n",
+       "   listing_id  reviewer_id reviewer_name  score  \\\n",
+       "0     1989997     55483280       Michael   98.0   \n",
+       "1     1657512       289650        Selena   86.0   \n",
+       "2    34181981     14454231          Kirk  100.0   \n",
+       "3    17237462      1254338         Shawn   91.0   \n",
+       "4    13333814    102616701      Mohammad   77.0   \n",
+       "\n",
+       "                          comments_without_stopwords  \n",
+       "0  gracious hosts beautiful apartment outstanding...  \n",
+       "1  Ruths lovely apartment conveniently located Ca...  \n",
+       "2  Great hosts Cool location Sparkling clean Litt...  \n",
+       "3  I booked place friends newlywed couple They re...  \n",
+       "4  If youre staying 12 days Maybe handle room lon...  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Exclude stopwords from comments\n",
+    "review_scores['comments_without_stopwords'] = review_scores['comments'].apply(lambda x: ' '.join([word for word in x.split() if word not in (stop)]))\n",
+    "\n",
+    "#Check\n",
+    "review_scores.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize Review Scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1403,7 @@
        "Text(0.5, 0, 'Scores')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1259,53 +1436,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text Analysis\n",
-    "\n",
-    "Some questions to explore:\n",
-    "- What are the topics of negative reviews vs positive reviews?\n",
-    "- Does greater word usage correlate positively with a more negative experience?\n",
-    "- How would you advise first time hosts to increase the liklihood of a positive review?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Split data into training and test sets"
+    "Bin scores based on quartile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    34923.000000\n",
-       "mean        95.974315\n",
-       "std          5.529684\n",
-       "min         20.000000\n",
-       "25%         95.000000\n",
-       "50%         97.000000\n",
-       "75%         99.000000\n",
-       "max        100.000000\n",
-       "Name: score, dtype: float64"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Binning scores\n",
-    "review_scores.score.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1322,6 +1458,9 @@
     }
    ],
    "source": [
+    "#Binning scores\n",
+    "review_scores.score.describe()\n",
+    "\n",
     "#Create score_labels based on quartile review_scores is in\n",
     "review_scores['score_labels'] = pd.qcut(review_scores['score'], q=4, labels=['Poor', 'Below Average','Above Average', 'Excellent'])\n",
     "\n",
@@ -1338,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
