--- a/Project Codes/02. Data Cleaning Scripts/12_27_2019_Reviews_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_27_2019_Reviews_Cleaning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "import pandas as pd\n",
     "import pandas_profiling\n",
     "\n",
+    "import swifter\n",
     "import re\n",
     "\n",
     "import numpy as np"
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,6 +179,90 @@
     "\n",
     "#reviewer_name does not have significance to comments or score from listings. Replacing with '-'\n",
     "reviews.reviewer_name.fillna('-', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Language Detection**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langdetect import detect\n",
+    "\n",
+    "# write the function that detects the language\n",
+    "def language_detection(text):\n",
+    "    try:\n",
+    "        return detect(text)\n",
+    "    except:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6bafafc1cd54541aeefaa36051c0099",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Pandas Apply', max=457677.0, style=ProgressStyle(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "reviews['language']=reviews.comments.swifter.apply(language_detection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Remove non english reviews\n",
+    "reviews = reviews[reviews['language'] == 'en']\n",
+    "\n",
+    "#Drop language column\n",
+    "reviews.drop(columns = ['language'], inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(425548, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(reviews.shape)"
    ]
   },
   {
@@ -202,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current shape of reviews: (456909, 6)\n"
+      "Current shape of reviews: (425548, 6)\n"
      ]
     }
    ],
@@ -234,49 +319,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Non-English Languages**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rows containg non-English characters:  75587\n",
-      "Current shape of reviews: (381322, 6)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Check for strings that contain characters outside of ascii(latin) alphabet\n",
-    "def isEnglish(s):\n",
-    "    try:\n",
-    "        s.encode(encoding='utf-8').decode('ascii')\n",
-    "    except UnicodeDecodeError:\n",
-    "        return False\n",
-    "    else:\n",
-    "        return True\n",
-    "\n",
-    "#How many rows contain non-ascii characters?\n",
-    "print('Rows containg non-English characters: ',len(reviews[reviews.comments.apply(isEnglish) == False]))\n",
-    "\n",
-    "#Removing rows containing non-ascii characters\n",
-    "reviews = reviews[reviews.comments.apply(isEnglish) == True]\n",
-    "\n",
-    "#Print current reviews shape\n",
-    "print('Current shape of reviews:', reviews.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
