TExt analysis completed up until LDA

--- a/Project Codes/05. Modeling/01_08_2020_Reviews_Text_Analysis.ipynb
+++ b/Project Codes/05. Modeling/01_08_2020_Reviews_Text_Analysis.ipynb
@@ -757,9 +757,7 @@
     }
    ],
    "source": [
-    "#Create bag of words of the 10_000 most common feature that do not appear in more than 15% of documents\n",
-    "vect = CountVectorizer(max_features=10_000, max_df=.15)\n",
-    "bow = vect.fit_transform(positive_reviews.comments_parsed)\n"
+    "from gensim\n"
    ]
   },
   {
@@ -767,15 +765,7 @@
    "execution_count": 141,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#import LDA\n",
-    "from sklearn.decomposition import LatentDirichletAllocation\n",
-    "\n",
-    "lda = LatentDirichletAllocation(n_components = 10, max_iter=25,\n",
-    "                                random_state=42)\n",
-    "\n",
-    "positive_topics = lda.fit_transform(bow)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -790,18 +780,37 @@
      ]
     }
    ],
-   "source": [
-    "print(lda.components_.shape)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#What insights can you gain from these?"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.28783433, 0.00344906, 0.00344862, ..., 0.00344871, 0.0034487 ,\n",
+       "        0.00344892],\n",
+       "       [0.00131614, 0.18273761, 0.00131619, ..., 0.00131605, 0.0013162 ,\n",
+       "        0.48858317],\n",
+       "       [0.00303114, 0.00303083, 0.0030311 , ..., 0.00303084, 0.00303102,\n",
+       "        0.0030311 ],\n",
+       "       ...,\n",
+       "       [0.00277835, 0.63991949, 0.3378521 , ..., 0.00277844, 0.00277874,\n",
+       "        0.00277871],\n",
+       "       [0.00303104, 0.00303092, 0.37715071, ..., 0.00303092, 0.59860101,\n",
+       "        0.00303087],\n",
+       "       [0.00243957, 0.00243949, 0.00243956, ..., 0.00243927, 0.00243983,\n",
+       "        0.00243951]])"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
