Corrected path and some data type issues that arose during preprocessing

--- a/Project Codes/02. Data Cleaning Scripts/12_27_2019_Listings_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_27_2019_Listings_Cleaning.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "# Data Cleaning - Aggregated Airbnb Listings"
    ]
@@ -86,8 +88,11 @@
     "#Set path to get aggregated listings data\n",
     "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\01_Raw\\SF Airbnb Raw Data\\SF Airbnb Raw Data - Aggregated\\01_04_2020_Listings_Raw_Aggregated.csv'\n",
     "\n",
+    "#list columns with date information to parse\n",
+    "dates = ['calendar_last_scraped', 'calendar_updated', 'first_review', 'host_since', 'last_review']\n",
+    "\n",
     "#Read in Airbnb listings Data\n",
-    "listings = pd.read_csv(path,index_col=0, low_memory=False, sep=',')\n"
+    "listings = pd.read_csv(path,index_col=0, low_memory=False, sep=',', parse_dates=dates)\n"
    ]
   },
   {
@@ -99,21 +104,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Set path to write Pandas Profiling Report\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Visualizations\\Pandas Reports'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Create Pandas Profiling Report for listings data\n",
-    "# profile = listings.profile_report(title='Airbnb Listings Report')\n",
+    "#Create Pandas Profiling Report for listings data\n",
+    "profile = listings.profile_report(title='Airbnb Listings Report')\n",
     "\n",
-    "# #Write profile to an HTML file\n",
-    "# profile.to_file(output_file=\"Airbnb Listings Report.html\")\n",
+    "#Write profile to an HTML file\n",
+    "profile.to_file(path + output_file=\"/Airbnb Listings Report.html\")\n",
     "\n",
-    "# #Capture rejected variables\n",
-    "# rejected_variables = profile.get_rejected_variables(threshold=0.9)\n",
+    "#Capture rejected variables\n",
+    "rejected_variables = profile.get_rejected_variables(threshold=0.9)\n",
     "\n",
-    "# #View variables that were rejected\n",
-    "# print('Variables rejected for having a greater collinearity than .9:', rejected_variables)"
+    "#View variables that were rejected\n",
+    "print('Variables rejected for having a greater collinearity than .9:', rejected_variables)"
    ]
   },
   {
@@ -122,10 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Variables rejected for having a collinearity > .9\n",
-    "# ['availability_60', 'availability_90', 'calculated_host_listings_count_entire_homes', 'country_code', \n",
-    "# 'host_total_listings_count', 'last_scraped', 'maximum_minimum_nights', 'maximum_nights', \n",
-    "# 'maximum_nights_avg_ntm', 'minimum_maximum_nights', 'minimum_minimum_nights', 'minimum_nights', 'minimum_nights_avg_ntm']"
+    "#Variables rejected for having a collinearity > .9\n",
+    "rejected = ['availability_60', 'availability_90', 'calculated_host_listings_count_entire_homes', 'country_code', \n",
+    "'host_total_listings_count', 'last_scraped', 'maximum_minimum_nights', 'maximum_nights', \n",
+    "'maximum_nights_avg_ntm', 'minimum_maximum_nights', 'minimum_minimum_nights', 'minimum_nights', 'minimum_nights_avg_ntm']"
    ]
   },
   {
@@ -134,8 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #View pandas profile for listings data\n",
-    "# profile"
+    "#View pandas profile for listings data\n",
+    "profile"
    ]
   },
   {
@@ -1160,7 +1175,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "### Column Removal"
    ]
@@ -1188,13 +1205,8 @@
     }
    ],
    "source": [
-    "#Create list of columns to drop\n",
-    "collinear= ['availability_60', 'availability_90', 'calculated_host_listings_count_entire_homes', 'country_code', \n",
-    "'host_total_listings_count', 'last_scraped', 'maximum_minimum_nights', 'maximum_nights', \n",
-    "'maximum_nights_avg_ntm', 'minimum_maximum_nights', 'minimum_minimum_nights', 'minimum_nights', 'minimum_nights_avg_ntm']\n",
-    "\n",
     "#Remove collinear columns from listings\n",
-    "listings.drop(columns = collinear, inplace = True)\n",
+    "listings.drop(columns = rejected, inplace = True)\n",
     "\n",
     "#Updated listings shape\n",
     "print('Updated listings shape:', listings.shape)"
@@ -2214,7 +2226,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "### Column Specific Cleaning\n",
     "\n",
